--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Labrador (N.L.) -- Juvenile fiction'
 - !lcc 'PS'
+- GITenberg
 title: 'The Gaunt Gray Wolf: A Tale of Adventure With Ungava Bob'
 url: http://www.gutenberg.org/ebooks/29374
